my description changes
my description changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img class="d-block mx-auto mb-4" src="./images/vinod_thumbnil.jpg" alt="" style="border-radius: 50%;">
         <h1 class="display-5 fw-bold text-body-emphasis">Front-End Developer</h1>
         <div class="col-lg-6 mx-auto"> <p class="lead mb-4">Vinod Kumar</p> </div>
-        <p class="">As in my more then 10 years of Front-End Development Career, I have worked on more then 200+ web development projects with many companies. Here is a mix list of Projects, where I worked. Many of them is complitly developed by me and few are partly complited. There is posibilities of changing of UI at any time. Many of them are my third pary projects.</p>
+        <p class="">In my over 10 years of Front-End Development Career, I have worked on over 200+ Web Development Projects with many companies. Here is a mixed list of projects, where I worked. Many of them are completely developed by me and few are partly completed. There is the possibility of changing of UI at any time of the listed projects. Many of them are my third-party projects.</p>
       </div>
 
       <div class="project-list-cont">
