added new react js project
added new react js project of restaurant menu app

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
           <div class="list-group list-group-flush">
             <a href="https://webindianlion.github.io/reactjs-weatherapp" class="project-list-item"><h3 class="">Weather App</h3></a>
-            <a href="https://webindianlion.github.io/reactjs-todoapp" class="project-list-item"><h3 class="">To Do App</h3></a>
+            <a href="https://webindianlion.github.io/react-restaurant-menu/" class="project-list-item"><h3 class="">Restaurant Menu App</h3></a>
             <a href="https://webindianlion.github.io/portfolio-website/" class="project-list-item"><h3 class="">Protfolio Website</h3></a>
+            <a href="https://webindianlion.github.io/reactjs-todoapp" class="project-list-item"><h3 class="">To Do App</h3></a>
             <a href="https://webindianlion.github.io/reactjs_stopwatch" class="project-list-item"><h3 class="">Stopwatch</h3></a>
           </div>
           <!------------------------------------------------------------>
