--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!------------------------------------------------------------>
 
         <div class="col-lg-4 d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary mx-1" style="width: 350px;">
-          <h2 class="ttl">Bootstrap Projects</h2>
+          <h2 class="ttl">Front-End Projects</h2>
         
           <div class="list-group list-group-flush">
             <a href="https://rapidfuel.in/" class="project-list-item" target="_blank"><h3 class="">Rapidfuel</h3></a>
